# AAA_2026

./: pyproject.toml
Workshop_05/: Workshop_05.ipynb
